test/analyze/type_check/type_parameters/implicit_in_method_return.myte
module test

trait Foo {}

// Implicit allowed in return type of method signatures
trait Trait1 {
  // Success
  fun signatureMethod(): Foo

  // Failure
  fun concreteMethod(): Foo = ()
}

fun main() {}